--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,14 +4,16 @@
         <meta charset="UTF-8">
         <title>{% block title %}BIOPROT!{% endblock %}</title>
         {% block stylesheets %}
+        <link rel="stylesheet" href="{{ asset('css/styles.css') }}"/>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <script src="https://kit.fontawesome.com/aa5cf69e35.js" crossorigin="anonymous"></script>
         {% endblock %}
     </head>
     <body>
         {% block menu %}
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="{{ path('home')}}"><img src=" {{ asset('images/logo/logo.png')}}"  alt="" /></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <nav class="navbar navbar-expand-lg ">
+  <a class="navbar-brand" href="{{ path('home')}}"><img src=" {{ asset('images/logo/logo.png')}}"  alt="logo bioprot" class="logo"/></a>
+  <button class="navbar-toggler shadow " type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
@@ -47,7 +49,27 @@
 
 
         {% block footer %}
-
+        		{# Footer begin #}
+		<footer class="text-light">
+			<a class="navbar-brand" href="{{path("home")}}"><img class="logo" src="{{asset("images/logo/logo.png")}}" alt="logo bioprot"/></a>
+			<ul class="text-center listFooter">
+				<li>Plan du site</li>
+				<li>
+					<a href="#">Conditions de vente et d'utilisation</a>
+				</li>
+				<li>
+					2020 ©  Tous droits réservés " Bioprot ".
+				</li>
+			</ul>
+			<div class="social-media text-center">
+				<h5>Suivez-nous:</h5>
+				<i class="fab fa-facebook"></i>
+				<i class="fab fa-twitter"></i>
+				<i class="fab fa-youtube"></i>
+				<i class="fab fa-instagram"></i>
+			</div>
+		</footer>
+		{# Footer finish #}
         {% endblock %}
 
         {% block javascripts %}
