--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,81 +1,88 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}BIOPROT!{% endblock %}</title>
-        {% block stylesheets %}
-        <link rel="stylesheet" href="{{ asset('css/styles.css') }}"/>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <script src="https://kit.fontawesome.com/aa5cf69e35.js" crossorigin="anonymous"></script>
-        {% endblock %}
-    </head>
-    <body>
-        {% block menu %}
-        <nav class="navbar navbar-expand-lg ">
-  <a class="navbar-brand" href="{{ path('home')}}"><img src=" {{ asset('images/logo/logo.png')}}"  alt="logo bioprot" class="logo"/></a>
-  <button class="navbar-toggler shadow " type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item ">
-        <a class="nav-link" href="{{ path('home')}}">Acceuil <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ path('product')}}">Protéines</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ path('home')}}">Panier</a>
-      </li>
-      {% if not app.user %}
-      <li class="nav-item">
-        <a class="nav-link" href="{{ path('loginUser')}}" >Connexion</a>
-      </li> 
-      {% else %}
-            <li class="nav-item">
-        <a class="nav-link" href="{{ path('logout')}}" >Déconnexion</a>
-      </li>
-      {% endif %}
-    </ul>
-    {% if app.user %}
-    <div>Connecté en tant que : {{app.user.surname }} {{app.user.name}} </div>
-    {% endif %}
-  </div>
-</nav>
-        {% endblock %}
-        {% block body %}
-        
-        {% endblock %}
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}BIOPROT!
+			{% endblock %}
+		</title>
+		{% block stylesheets %}
+			<link rel="stylesheet" href="{{ asset('css/styles.css') }}"/>
+			<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+			<script src="https://kit.fontawesome.com/aa5cf69e35.js" crossorigin="anonymous"></script>
+		{% endblock %}
+	</head>
+	<body>
+		{% block menu %}
+			<nav class="navbar navbar-expand-lg ">
+				<a class="navbar-brand" href="{{ path('home')}}"><img src=" {{ asset('images/logo/logo.png')}}" alt="logo bioprot" class="logo"/></a>
+				<button class="navbar-toggler shadow " type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav">
+						<li class="nav-item ">
+							<a class="nav-link" href="{{ path('home')}}">Acceuil
+								<span class="sr-only">(current)</span>
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{ path('product')}}">Protéines</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{ path('cartIndex')}}">Panier</a>
+						</li>
+						{% if not app.user %}
+							<li class="nav-item">
+								<a class="nav-link" href="{{ path('loginUser')}}">Connexion</a>
+							</li>
+						{% else %}
+							<li class="nav-item">
+								<a class="nav-link" href="{{ path('logout')}}">Déconnexion</a>
+							</li>
+						{% endif %}
+					</ul>
+					{% if app.user %}
+						<div>Connecté en tant que :
+							{{app.user.surname }}
+							{{app.user.name}}
+						</div>
+					{% endif %}
+				</div>
+			</nav>
+		{% endblock %}
+		{% block body %}{% endblock %}
 
 
-        {% block footer %}
-        		{# Footer begin #}
-		<footer class="text-light">
-			<a class="navbar-brand" href="{{path("home")}}"><img class="logo" src="{{asset("images/logo/logo.png")}}" alt="logo bioprot"/></a>
-			<ul class="text-center listFooter">
-				<li>Plan du site</li>
-				<li>
-					<a href="#">Conditions de vente et d'utilisation</a>
-				</li>
-				<li>
-					2020 ©  Tous droits réservés " Bioprot ".
-				</li>
-			</ul>
-			<div class="social-media text-center">
-				<h5>Suivez-nous:</h5>
-				<i class="fab fa-facebook"></i>
-				<i class="fab fa-twitter"></i>
-				<i class="fab fa-youtube"></i>
-				<i class="fab fa-instagram"></i>
-			</div>
-		</footer>
-		{# Footer finish #}
-        {% endblock %}
+		{% block footer %}
+			{# Footer begin #}
+			<footer class="text-light">
+				<a class="navbar-brand" href="{{path("home")}}"><img class="logo" src="{{asset("images/logo/logo.png")}}" alt="logo bioprot"/></a>
+				<ul class="text-center listFooter">
+					<li>Plan du site</li>
+					<li>
+						<a href="#">Conditions de vente et d'utilisation</a>
+					</li>
+					<li>
+						2020 ©  Tous droits réservés " Bioprot ".
+					</li>
+				</ul>
+				<div class="social-media text-center">
+					<h5>Suivez-nous:</h5>
+					<i class="fab fa-facebook"></i>
+					<i class="fab fa-twitter"></i>
+					<i class="fab fa-youtube"></i>
+					<i class="fab fa-instagram"></i>
+				</div>
+			</footer>
+			{# Footer finish #}
+		{% endblock %}
 
-        {% block javascripts %}
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-        {% endblock %}
-    </body>
+		{% block javascripts %}
+			<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+		{% endblock %}
+	</body>
 </html>
+
