--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,7 +1,57 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}BIOPROT ACCEUIL{% endblock %}
+{% block title %}BIOPROT ACCEUIL
+{% endblock %}
 
 {% block body %}
+	<section class="row">
+		<div class="col-6 bg">
+			<div class="row d-flex align-items-center text-center">
+				<div class="col-3"><img src="{{ asset('images/icone/vache.png')}}" alt="..."/><p>description</p>
+				</div>
+				<div class="col-3"><img src="{{ asset('images/icone/noLactose.png')}}" alt="..."/><p>description</p>
+				</div>
+
+				<div class="col-3"><img src="{{ asset('images/icone/proteine.png')}}" alt="..."/><p>description</p>
+				</div>
+				<div class="col-3"><img src="{{ asset('images/icone/soluble.png')}}" alt="..."/><p>description</p>
+				</div>
+
+			</div>
+			<hr>
+			<div class="container text-center">
+				<h4>Notre objectif
+				</h4>
+				<p>
+					t’apporter ce qu’il y a de mieux. Plus de bienfaits, les meilleurs ingrédients, délicieusement savoureux, tout en restant au summum de la simplicité. C'est dans notre laboratoire berlinois que nous y arrivons, grâce à nos procédés brevetés, établis par nos nutritionnistes, chimistes alimentaires, et ingénieurs. Le tout pour les produits d'exception que tu as entre les mains. Pour aller plus loin, ensemble.
+				</p>
+			</div>
+		</div>
+
+		<div id="carouselExampleControls" class="carousel slide col-6 " data-ride="carousel">
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img src="{{ asset('images/caroussel/fitness1.jpg')}}" class="d-block w-100" alt="...">
+				</div>
+				<div class="carousel-item">
+					<img src="{{ asset('images/caroussel/product1.jpg')}}" class="d-block w-100" alt="...">
+				</div>
+				<div class="carousel-item">
+					<img src="{{ asset('images/caroussel/fitness2.png')}}" class="d-block w-100" alt="...">
+				</div>
+			</div>
+			<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
+		</div>
+
+
+	</section>
+
 
 {% endblock %}
