--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -1,45 +1,46 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ProductController!{% endblock %}
+{% block title %}Hello ProductController!
+{% endblock %}
 
 {% block body %}
-		<section class=" my-5 container productslist">
-			<div class="row">
-				{% for product in products %}
-					<div class="col-lg-4 col-md-6 mb-5 text-center ">
-						<div class="card h-100 shadow">
-							<a href="#"><img class="card-img-top img-fluid mx-auto imgAllProd" src="{{asset('images/products/' ~ product.image)}}" alt="{{product.name}}"></a>
-							<div class="card-body">
-								<h4 class="card-title">
-									<a href="{{path('onceProduct',{'id': product.id})}}">{{product.name}}
-										{{product.weight}}gr</a>
-								</h4>
-								<h5>Prix:
-									{{product.price| format_currency('EUR') }}</h5>
-								<p class="card-text text-justify">{{ product.description|length >200 ? product.description|slice(0, 200) ~ ' ...' : product.description  }}</p>
-								{% if product.stock == 0 %}
-									<p class="alert alert-warning" role="alert">
-										Patience, il va bientôt revenir.
-									</p>
-								{% elseif product.stock <= 5 %}
-									<p class="alert alert-danger" role="alert">
-										Attention il ne reste plus que
-										{{product.stock}}
-										pots!
-									</p>
-								{% endif %}
-							</div>
-							<div class="card-footer d-flex justify-content-center">
-								{% if product.stock ==0 %}
-									<button type="button" class="btn shadow btn-colorPrimary" disabled>Non disponible actuellement</button>
-								{% else %}
-									<a href="#" class="btn shadow btn-colorPrimary">Ajouter au panier</a>
-								{% endif %}
-							</div>
+	<section class=" my-5 container productslist">
+		<div class="row">
+			{% for product in products %}
+				<div class="col-lg-4 col-md-6 mb-5 text-center ">
+					<div class="card h-100 shadow">
+						<a href="#"><img class="card-img-top img-fluid mx-auto imgAllProd" src="{{asset('images/products/' ~ product.image)}}" alt="{{product.name}}"></a>
+						<div class="card-body">
+							<h4 class="card-title">
+								<a href="{{path('onceProduct',{'id': product.id})}}">{{product.name}}
+									{{product.weight}}gr</a>
+							</h4>
+							<h5>Prix:
+								{{product.price| format_currency('EUR') }}</h5>
+							<p class="card-text text-justify">{{ product.description|length >200 ? product.description|slice(0, 200) ~ ' ...' : product.description  }}</p>
+							{% if product.stock == 0 %}
+								<p class="alert alert-warning" role="alert">
+									Patience, il va bientôt revenir.
+								</p>
+							{% elseif product.stock <= 5 %}
+								<p class="alert alert-danger" role="alert">
+									Attention il ne reste plus que
+									{{product.stock}}
+									pots!
+								</p>
+							{% endif %}
+						</div>
+						<div class="card-footer d-flex justify-content-center">
+							{% if product.stock ==0 %}
+								<button type="button" class="btn shadow btn-colorPrimary" disabled>Non disponible actuellement</button>
+							{% else %}
+								<a href="{{ path('cartAdd', {'id': product.id}) }}" class="btn shadow btn-colorPrimary">Ajouter au panier</a>
+							{% endif %}
 						</div>
 					</div>
-				{% endfor %}
-			</div>
-		</section>
-		{# Product List display end #}
+				</div>
+			{% endfor %}
+		</div>
+	</section>
+	{# Product List display end #}
 {% endblock %}
