--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,3 @@
-
 .logo {
     height: 10vh;
     width: 10vh;
@@ -46,8 +45,44 @@ li {
     list-style-type: none;
 }
 
-.bg{
-    background-image: url("../images/icone/wood.jpg");
+.icone-presentation {
+    height: 6vh;
+    width: 6vh;
+}
 
+.our-values {
+    position: relative;
+    height: 787px;
+}
 
+#values {
+    height: 250px;
+}
+
+#pres {
+    height: 300px;
+}
+
+footer {
+    min-height: 20vh;
+    background-color: bisque;
+    width: 100%;
+}
+
+.new-products {
+    background-color: #130f40;
+}
+
+@media screen and (max-width: 1100px) {
+    .our-values {
+        height: 500px;
+    }
+
+    #values {
+        height: 150px;
+    }
+
+    #pres {
+        height: 200px;
+    }
 }
