--- a/templates/admin/addNewProduct.html.twig
+++ b/templates/admin/addNewProduct.html.twig
@@ -5,11 +5,24 @@
 
 {% block body %}
 
-	<div class="example-wrapper">
-		{{form_start(formP)}}
-		{{form_widget(formP)}}
-		<input type="submit" value="Valider">
-		{{ form_end (formP) }}
-	</div>
-{% endblock %}
 
+	<div class="container">
+						{{form_start(formP) }}
+		<div class="row">
+			<div class="col-12">
+					<div class="panel-heading">
+						<h3 class="panel title text-center">Ajouter un nouveau produit</h3>
+					</div>
+						{{form_widget(formP) }}
+					<div class="panel-body">
+						<input 
+						class="col-12 my-5 btn btn-colorPrimary shadow btn-lock text-center" 
+						type="submit" 
+						value="Valider"
+						>
+					</div>
+			</div>
+		</div>
+	</div>
+						{{ form_end(formP) }}
+{% endblock %}
