--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,6 +26,12 @@
 								<span class="sr-only">(current)</span>
 							</a>
 						</li>
+						{% if is_granted("ROLE_ADMIN") %}
+						<li class="nav-item ">
+							<a class="nav-link" href="{{ path('admin')}}">gestion admin
+							</a>
+						</li>
+						{% endif %}
 						<li class="nav-item">
 							<a class="nav-link" href="{{ path('product')}}">Protéines</a>
 						</li>
